# udicti-cli

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  web_server.py
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml
